2008-04-03  Bastien Nocera  <hadess@hadess.net>

	* bindings/python/override_common.c:
	* bindings/python/override_common.h: Fix missing
	exception, the code was relicensed as part of the
	plugins code relicensing already (Helps: #525856)

2008-04-03  Bastien Nocera  <hadess@hadess.net>

        * src/backend/bacon-video-widget-gst-0.10.c
	(bvw_update_interface_implementations):
	Fix unreffing a non-reffed element, fixes warnings
	when ximagesink is forced (Closes: #524807)
	Patch from Sjoerd Simons <sjoerd@luon.net>

2008-03-28  Philip Withnall  <pwithnall@svn.gnome.org>

	* src/plugins/youtube/youtube.py: Don't fall over if the YouTube
	servers return HTTP errors.

2008-03-25  Philip Withnall  <pwithnall@svn.gnome.org>

	* src/plugins/publish/totem-publish.c:
	(totem_publish_plugin_media_cb): Patch from  Mathias Hasselmann
	<mathias.hasselmann@gmx.de> to properly unref the input stream in
	the publish plugin. (Closes: #512589)

2008-03-25  Philip Withnall  <pwithnall@svn.gnome.org>

	* src/totem.c: (main): Patch from Krzysztof Kotlenga
	<piernik@gmail.com> to fix a crash on an unrecognised command line.
	(Closes: #522070)

2008-03-17  Vincent Untz  <vuntz@gnome.org>

	* data/desktop.sh: end the outputted line with \n

2008-03-16  Philip Withnall  <pwithnall@svn.gnome.org>

	* src/plugins/youtube/youtube.py: Change to use the "api" data view
	(meaning we don't download a load of useless HTML) and clean up the
	code to get the video URL a little.

2008-03-16  Philip Withnall  <pwithnall@svn.gnome.org>

	* data/totem.ui: Add a broom icon to the "Clear Playlist" menu
	entry. (Closes: #522623)

2008-03-16  Philip Withnall  <pwithnall@svn.gnome.org>

	* src/totem-video-indexer.c: (main):
	* src/totem-video-thumbnailer.c: (main): Convert to GIO.

2008-03-16  Philip Withnall  <pwithnall@svn.gnome.org>

	* src/plugins/publish/totem-publish.c:
	(totem_publish_plugin_stream_cb), (totem_publish_plugin_media_cb):
	Convert the Publish plugin to GIO. (Closes: #512589)
