@@ -1,5 +1,10 @@
 2008-04-03  Bastien Nocera  <hadess@hadess.net>
 
+	* src/totem-menu.c (add_drive_to_menu), (update_drive_menu_items):
+	Better media menu support through GIO
+
+2008-04-03  Bastien Nocera  <hadess@hadess.net>
+
 	* bindings/python/override_common.c:
 	* bindings/python/override_common.h: Fix missing
 	exception, the code was relicensed as part of the
